fix: address code review findings
- Use Collectors.joining() instead of reduce for agent descriptions
- Wrap callFamiliar() in try-catch for user-friendly network error messages
- Add comment documenting StructuredTaskScope preview API requirement

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>